test_suite/ERROR_keyword_as_id.java
class Main {
    public static void main(String[] a) {
    }
}

class boolean {
    int a;
}

class A {
    int[] int;
}

class B {
    public int boolean(int a) {
        return 1;
    }
}

// A lot of errors in this are useless, but some are important
// and uncover some important error recovery, like in `class boolean`
